# uradori

./: .gitignore  CLA.md  COMMERCIAL.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
samples/: sample_report.json
src/uradori/: __init__.py  cli.py  display.py  extractor.py  fetcher.py  models.py  pipeline.py  searcher.py  verifier.py
tests/: __init__.py  test_cli.py  test_extractor.py  test_fetcher.py  test_models.py  test_pipeline.py  test_searcher.py  test_verifier.py
